fix: video width on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -644,6 +644,10 @@
         overflow: hidden;
     }
 
+    .video {
+        width: fit-content;
+    }
+
 /* || KONTAKT */
     .kontakt-container {
         display: block;
